<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/rootView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:behavior_hideable="true"
    app:behavior_peekHeight="56dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:padding="16dp"
    android:background="@color/colorSurface">

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/numberCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/has_number_checkbox_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/emailCheckBox"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/emailCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/has_email_checkbox_text"
        app:layout_constraintTop_toBottomOf="@id/numberCheckBox"
        app:layout_constraintBottom_toTopOf="@id/applyFiltersButton"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/applyFiltersButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/apply_filters_button_text"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/emailCheckBox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/clearFiltersButton"
        style="@style/Button.Filled"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/clearFiltersButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/clear_filters_button"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/emailCheckBox"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/applyFiltersButton"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Button.Filled.Surface"/>



</androidx.constraintlayout.widget.ConstraintLayout>