<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddContactFragment"
    android:layout_margin="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contactNameTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/contactNumberTIL"
        app:errorEnabled="true"
        app:hintTextColor="@color/colorOnSurface"
        android:textColorHint="@color/colorOnSurface"
        android:layout_marginBottom="4dp"
        app:startIconDrawable="@drawable/ic_account_box_secondary_24dp"
        app:startIconTint="@color/colorSecondary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contactNameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_name_hint"
            android:inputType="textCapWords"
            android:backgroundTint="@color/colorSurface"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contactNumberTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/contactNameTIL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/contactEmailTIL"
        app:errorEnabled="true"
        android:theme="@style/TextInputLayoutStyle"
        app:hintTextColor="@color/colorOnSurface"
        android:textColorHint="@color/colorOnSurface"
        android:layout_marginBottom="4dp"
        app:startIconDrawable="@drawable/ic_phone_secondary_24dp"
        app:startIconTint="@color/colorSecondary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contactNumberET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_hint"
            android:inputType="number"
            android:backgroundTint="@color/colorSurface"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contactEmailTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/contactNumberTIL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/contactDateTIL"
        app:errorEnabled="true"
        android:theme="@style/TextInputLayoutStyle"
        app:hintTextColor="@color/colorOnSurface"
        android:textColorHint="@color/colorOnSurface"
        android:layout_marginBottom="4dp"
        app:startIconDrawable="@drawable/ic_email_secondary_24dp"
        app:startIconTint="@color/colorSecondary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contactEmailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/colorSurface"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/contactDateTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/contactEmailTIL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/saveContactButton"
        android:focusable="false"
        android:clickable="false"
        app:errorEnabled="true"
        android:theme="@style/TextInputLayoutStyle"
        app:hintTextColor="@color/colorOnSurface"
        android:textColorHint="@color/colorOnSurface"
        app:startIconDrawable="@drawable/ic_calendar_secondary_24dp"
        app:startIconTint="@color/colorSecondary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/contactDateET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_last_contact_hint"
            android:inputType="date"
            android:focusable="false"
            android:clickable="false"
            android:backgroundTint="@color/colorSurface"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveContactButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:minHeight="56dp"
        android:text="@string/save_contact_button_title"
        app:layout_constraintTop_toBottomOf="@id/contactDateTIL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        style="@style/Button.Filled"/>


</androidx.constraintlayout.widget.ConstraintLayout>